[gd_scene load_steps=10 format=3 uid="uid://bf7s3eppwnfkq"]

[ext_resource type="Texture2D" uid="uid://dkfm6v4w4bp2d" path="res://textures/demountable-ceiling-tile-stack-2440-mm-architextures.jpg" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://bvbi7did4se3d" path="res://scenes/game.gd" id="1_yqjtg"]
[ext_resource type="AudioStream" uid="uid://djs2m5asgsv26" path="res://tap2.wav" id="3_lnu2h"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3d1i7"]
texture = ExtResource("1_uwrxv")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color(0.800491, 0.800491, 0.800491, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uwrxv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnu2h"]
bg_color = Color(0.857367, 0.0522333, 3.85046e-07, 1)
corner_radius_top_left = 300
corner_radius_top_right = 300
corner_radius_bottom_right = 300
corner_radius_bottom_left = 300
shadow_color = Color(0.281187, 0.281187, 0.281187, 1)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqjtg"]
bg_color = Color(0.529436, 0.0183662, 1.44392e-07, 1)
corner_radius_top_left = 300
corner_radius_top_right = 300
corner_radius_bottom_right = 300
corner_radius_bottom_left = 300
shadow_color = Color(0.281187, 0.281187, 0.281187, 1)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uwrxv"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbhrr"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqjtg")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3d1i7")

[node name="ClickyButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -131.0
offset_right = 100.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0.392157)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0.392157)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0.392157)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 0.392157)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0.392157)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 0.392157)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.392157)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0.392157)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 0.392157)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.392157)
theme_override_colors/font_color = Color(0, 0, 0, 0.392157)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0.392157)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0.392157)
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_uwrxv")
theme_override_styles/hover = SubResource("StyleBoxFlat_lnu2h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yqjtg")
theme_override_styles/normal = SubResource("StyleBoxFlat_lnu2h")
text = "Click Me!"

[node name="resetButton2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -115.0
offset_right = 100.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_uwrxv")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_uwrxv")
theme_override_styles/hover = SubResource("StyleBoxFlat_uwrxv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uwrxv")
theme_override_styles/normal = SubResource("StyleBoxFlat_uwrxv")
text = "Reset"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -58.0
offset_right = 100.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_uwrxv")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_uwrxv")
theme_override_styles/hover = SubResource("StyleBoxFlat_uwrxv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uwrxv")
theme_override_styles/normal = SubResource("StyleBoxFlat_uwrxv")
text = "Back
"

[node name="clicks" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.5
offset_top = -195.0
offset_right = 79.5
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SecondsText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.5
offset_right = 79.5
offset_bottom = 55.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Seconds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SecondsLeft" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.5
offset_top = 56.0
offset_right = 79.5
offset_bottom = 139.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0

[node name="Tap2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lnu2h")
volume_db = -10.0

[node name="nameInput" type="TextEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 51.0
offset_right = 100.0
offset_bottom = 93.0
grow_horizontal = 2
text = "PlayerName"

[node name="submitScore" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 99.0
offset_right = 100.0
offset_bottom = 149.0
grow_horizontal = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_lbhrr")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_lbhrr")
theme_override_styles/hover = SubResource("StyleBoxFlat_lbhrr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lbhrr")
theme_override_styles/normal = SubResource("StyleBoxFlat_lbhrr")
text = "Submit Score"

[connection signal="pressed" from="ClickyButton" to="." method="_on_clicky_button_pressed"]
[connection signal="pressed" from="resetButton2" to="." method="_on_reset_button_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="submitScore" to="." method="_on_submit_score_pressed"]
